got basic async querying working; needs cleanup

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,11 @@
+aiohttp==2.3.10
+async-timeout==2.0.1
 certifi==2018.1.18
 chardet==3.0.4
 idna==2.6
+idna-ssl==1.0.1
+multidict==4.1.0
 PyYAML==3.12
 requests==2.18.4
 urllib3==1.22
+yarl==1.1.1
