--- a/requirements.txt
+++ b/requirements.txt
@@ -7,9 +7,15 @@ idna==2.6
 idna-ssl==1.0.1
 jmespath==0.9.3
 multidict==4.1.0
+pbr==1.9.1
 ply==3.11
+python-dateutil==2.7.3
 PyYAML==3.12
 requests==2.18.4
 six==1.11.0
+stevedore==1.12.0
 urllib3==1.22
+virtualenv==15.0.2
+virtualenv-clone==0.2.6
+virtualenvwrapper==4.7.1
 yarl==1.1.1
