--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,14 @@
-aiohttp==2.3.1
-async-timeout==2.0.1
-certifi==2018.1.18
+aiohttp==3.4.4
+async-timeout==3.0.1
+attrs==18.2.0
+certifi==2018.11.29
 chardet==3.0.4
-decorator==4.2.1
-idna==2.6
-idna-ssl==1.0.1
+idna==2.7
 jmespath==0.9.3
-multidict==4.1.0
-pbr==1.9.1
-ply==3.11
-python-dateutil==2.7.3
-PyYAML==3.12
-requests==2.18.4
+multidict==4.5.2
+python-dateutil==2.7.5
+PyYAML==3.13
+requests==2.20.1
 six==1.11.0
-stevedore==1.12.0
-urllib3==1.22
-virtualenv==15.0.2
-virtualenv-clone==0.2.6
-virtualenvwrapper==4.7.1
-yarl==1.1.1
+urllib3==1.24.1
+yarl==1.2.6
